--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
     "prisma": "prisma",
-    "prisma:seed": "tsx ./prisma/seed.ts"
+    "prisma:seed": "tsx ./prisma/seed.ts",
+    "tsc": "npx tsc --noEmit"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
@@ -57,6 +58,6 @@
     "storybook": "^7.6.10",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
