added postinstall script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
     "prisma": "prisma",
     "prisma:seed": "tsx ./prisma/seed.ts",
-    "tsc": "npx tsc --noEmit"
+    "tsc": "npx tsc --noEmit",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
