--- a/public/assets/favicons/manifest.json
+++ b/public/assets/favicons/manifest.json
@@ -37,5 +37,7 @@
       "type": "image/png",
       "density": "4.0"
     }
-  ]
+  ],
+  "background_color": "#000000",
+  "theme_color": "#000000"
 }
