--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.319.0",
     "next": "^14.1.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^9.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
@@ -39,6 +41,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
@@ -52,13 +55,11 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "prisma": "^5.9.1",
     "prisma-json-types-generator": "^3.0.3",
     "sass": "^1.70.0",
-    "storybook": "^7.6.10",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
