--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "svix": "^1.17.0",
     "tailwind-merge": "^2.2.1",
     "tailwind-variants": "^0.1.20",
     "zod": "^3.22.4"
