--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "no-shadow": "off",
     "quotes": "off",
     "camelcase": "off",
+    "no-await-in-loop": "off",
     "@typescript-eslint/no-shadow": "error",
     "import/no-extraneous-dependencies": ["error"],
     "@typescript-eslint/explicit-member-accessibility": "off",
