--- a/public/assets/favicons/manifest.json
+++ b/public/assets/favicons/manifest.json
@@ -46,5 +46,5 @@
   "background_color": "#000000",
   "theme_color": "#18181b",
   "display": "fullscreen",
-  "start_url": "https://contentlist.vercel.app"
+  "start_url": "https://www.contentlist.space"
 }
