--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint",
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
     "prisma": "prisma",
-    "prisma:seed": "tsx ./prisma/seed.ts",
     "prisma:gen": "prisma generate",
-    "prisma:db:push": "prisma db push",
+    "prisma:seed": "tsx ./prisma/seed.ts",
+    "db:push:dev": "prisma db push",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:reset": "prisma migrate reset",
+    "migrate:deploy": "prisma migrate deploy",
     "tsc": "npx tsc --noEmit",
     "postinstall": "prisma generate"
   },
@@ -37,6 +40,7 @@
     "next": "^14.1.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^9.3.0",
+    "prisma": "^5.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
@@ -53,6 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "autoprefixer": "^10.4.17",
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-next": "^14.1.0",
@@ -62,7 +67,6 @@
     "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
-    "prisma": "^5.9.1",
     "prisma-json-types-generator": "^3.0.3",
     "sass": "^1.70.0",
     "tailwindcss": "^3.4.1",
