--- a/.github/workflows/dev.deploy.yml
+++ b/.github/workflows/dev.deploy.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - dev
 jobs:
-  deploy-dev:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -35,4 +35,4 @@ jobs:
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
