--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "sharp": "^0.33.2",
     "svix": "^1.17.0",
     "tailwind-merge": "^2.2.1",
     "tailwind-variants": "^0.1.20",
