feat: integrated anilist graphql to search, important search changes

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "eslint --fix",
     "format:write": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
     "format:check": "prettier --check \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
     "prisma": "prisma",
@@ -17,7 +18,8 @@
     "migrate:reset": "prisma migrate reset",
     "migrate:deploy": "prisma migrate deploy",
     "tsc": "npx tsc --noEmit",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "generate-types:anilist": "npx graphql-code-generator --config ./scripts/anilist-ts-gen.ts && prettier --write \"./src/services/anilistApi/**/*.{ts,tsx}\" && eslint --fix ./src/services/anilistApi"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.7",
@@ -27,14 +29,18 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.9.1",
     "@reduxjs/toolkit": "^2.1.0",
     "@rtk-query/codegen-openapi": "^1.2.0",
+    "@rtk-query/graphql-request-base-query": "^2.3.1",
     "@types/lodash.debounce": "^4.0.9",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.3",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "html2canvas": "^1.4.1",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.319.0",
@@ -53,6 +59,13 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@graphql-codegen/add": "^5.0.2",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/near-operation-file-preset": "^3.0.0",
+    "@graphql-codegen/typescript": "^4.0.6",
+    "@graphql-codegen/typescript-graphql-request": "^6.2.0",
+    "@graphql-codegen/typescript-operations": "^4.2.0",
+    "@graphql-codegen/typescript-rtk-query": "^3.1.1",
     "@types/node": "^20",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
