--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "npx tsx ./scripts/check-envs.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -38,6 +39,7 @@
     "@types/lodash.debounce": "^4.0.9",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.3",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
