--- a/.github/workflows/prod.deploy.yml
+++ b/.github/workflows/prod.deploy.yml
@@ -7,14 +7,17 @@ on:
     branches:
       - master
 jobs:
+  lint:
+    uses: ./.github/workflows/lint_and_format_checks.yml
   deploy-prod:
+    needs: lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
 
       - name: Install Prisma
         run: npm install --save prisma
