--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@graphql-codegen/typescript-operations": "^4.2.0",
     "@graphql-codegen/typescript-rtk-query": "^3.1.1",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
@@ -88,6 +89,7 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "papaparse": "^5.4.1",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "prisma-json-types-generator": "^3.0.3",
